--- a/app/src/main/res/values-ka-rGE/strings.xml
+++ b/app/src/main/res/values-ka-rGE/strings.xml
@@ -5,4 +5,16 @@
     <string name="btn_get_started">დაწყება</string>
     <string name="tv_skip">გამოტოვება</string>
     <string name="cd_img_walkthrough">გზამკლევის სურათი</string>
+
+    <!-- Walkthrough -->
+    <string-array name="walkthrough_titles">
+        <item>გამარჯობა</item>
+        <item>გამოიკვლიე</item>
+        <item>გაანალიზე</item>
+    </string-array>
+    <string-array name="walkthrough_descriptions">
+        <item>კეთილი იყოს თქვენი მობრძანება კრიპტო ნუმიზმატისტის აპლიკაციაში. \n ცოცხალი კრიპტოვალუტის საბაზრო კაპიტალი, ფასები და სხვა.</item>
+        <item>ფასის ისტორია, ბაზრები და ყველა კრიპტოვალუტის უახლესი ცვლილებები.</item>
+        <item>მოწოდებული მონაცემები მარტივ და კომპაქტურ ინტერფეისში, ასევე გაუზიარეთ მეგობრებს.</item>
+    </string-array>
 </resources>
