--- a/app/src/main/res/values-ru-rRU/strings.xml
+++ b/app/src/main/res/values-ru-rRU/strings.xml
@@ -5,4 +5,15 @@
     <string name="btn_get_started">Приступить</string>
     <string name="btn_next">Дальше</string>
     <string name="cd_img_walkthrough">Изображение туториала</string>
+    <!-- Walkthrough -->
+    <string-array name="walkthrough_titles">
+        <item>Добро пожаловать</item>
+        <item>Исследуй</item>
+        <item>Анализируй</item>
+    </string-array>
+    <string-array name="walkthrough_descriptions">
+        <item>В приложение Крипто Нумизматист. \n Рыночная капитализация криптовалют в реальном времени, цены и многое другое.</item>
+        <item>История цен, рынки и Последние изменения каждой криптовалюты.</item>
+        <item>Предоставленные данные в простом и компактном дизайне, а также поделитесь с друзьями.</item>
+    </string-array>
 </resources>
