--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,7 +7,17 @@
     <string name="btn_next">Next</string>
     <string name="btn_get_started">Get Started</string>
     <string name="tv_skip">Skip</string>
-
+    <!-- Walkthrough -->
+    <string-array name="walkthrough_titles">
+        <item>Welcome</item>
+        <item>Explore</item>
+        <item>Analyze</item>
+    </string-array>
+    <string-array name="walkthrough_descriptions">
+        <item>To Crypto Numismatist Application. \n Live cryptocurrency market cap, prices and more</item>
+        <item>Price History, Markets &amp; Latest changes of every Crypto Currency.</item>
+        <item>Provided data with easy and compact design &amp; share with your friends.</item>
+    </string-array>
 
     <!-- Content Description -->
     <string name="cd_img_walkthrough">Walkthrough Image</string>
