--- a/app/src/main/res/values-ka-rGE/strings.xml
+++ b/app/src/main/res/values-ka-rGE/strings.xml
@@ -6,14 +6,13 @@
     <string name="cd_img_walkthrough">გზამკლევის სურათი</string>
 
     <!-- Walkthrough -->
-    <string-array name="walkthrough_titles">
-        <item>გამარჯობა</item>
-        <item>გამოიკვლიე</item>
-        <item>გაანალიზე</item>
-    </string-array>
-    <string-array name="walkthrough_descriptions">
-        <item>კეთილი იყოს თქვენი მობრძანება კრიპტო ნუმიზმატისტის აპლიკაციაში. \n ცოცხალი კრიპტოვალუტის საბაზრო კაპიტალი, ფასები და სხვა.</item>
-        <item>ფასის ისტორია, ბაზრები და ყველა კრიპტოვალუტის უახლესი ცვლილებები.</item>
-        <item>მოწოდებული მონაცემები მარტივ და კომპაქტურ ინტერფეისში, ასევე გაუზიარეთ მეგობრებს.</item>
-    </string-array>
+    <!-- Titles -->
+    <string name="title_welcome">გამარჯობა</string>
+    <string name="title_explore">გამოიკვლიე</string>
+    <string name="title_analyze">გაანალიზე</string>
+    <!-- Descriptions -->
+    <string name="desc_welcome">კეთილი იყოს თქვენი მობრძანება კრიპტო ნუმიზმატისტის აპლიკაციაში. \n ცოცხალი კრიპტოვალუტის საბაზრო კაპიტალი, ფასები და სხვა.</string>
+    <string name="desc_explore">ფასის ისტორია, ბაზრები და ყველა კრიპტოვალუტის უახლესი ცვლილებები.</string>
+    <string name="desc_analye">მოწოდებული მონაცემები მარტივ და კომპაქტურ ინტერფეისში, ასევე გაუზიარეთ მეგობრებს.</string>
+
 </resources>
