--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,16 +8,18 @@
     <string name="btn_get_started">Get Started</string>
     <string name="tv_skip">Skip</string>
     <!-- Walkthrough -->
-    <string-array name="walkthrough_titles">
-        <item>Welcome</item>
-        <item>Explore</item>
-        <item>Analyze</item>
-    </string-array>
-    <string-array name="walkthrough_descriptions">
-        <item>To Crypto Numismatist Application. \n Live cryptocurrency market cap, prices and more</item>
-        <item>Price History, Markets &amp; Latest changes of every Crypto Currency.</item>
-        <item>Provided data with easy and compact design &amp; share with your friends.</item>
-    </string-array>
+    <!-- Titles -->
+    <string name="title_welcome">Welcome</string>
+    <string name="title_explore">Explore</string>
+    <string name="title_analyze">Analyze</string>
+    <!-- Descriptions -->
+    <string name="desc_welcome">To Crypto Numismatist Application. \n Live cryptocurrency market cap, prices and more</string>
+    <string name="desc_explore">Price History, Markets &amp; Latest changes of every Crypto Currency.</string>
+    <string name="desc_analye">Provided data with easy and compact design &amp; share with your friends.</string>
+    <!-- Images -->
+    <drawable name="img_welcome">@drawable/logo</drawable>
+    <drawable name="img_explore">@drawable/coin</drawable>
+    <drawable name="img_analyze">@drawable/node</drawable>
 
     <!-- Content Description -->
     <string name="cd_img_walkthrough">Walkthrough Image</string>
