--- a/app/src/main/res/values-ru-rRU/strings.xml
+++ b/app/src/main/res/values-ru-rRU/strings.xml
@@ -3,7 +3,7 @@
     <string name="tv_skip">Пропустить</string>
     <string name="btn_get_started">Приступить</string>
     <string name="btn_next">Дальше</string>
-    <string name="cd_img_walkthrough">Изображение туториала</string>
+    <string name="cd_img_walk_through">Изображение туториала</string>
     <!-- Walkthrough -->
     <!-- Titles -->
     <string name="title_welcome">Добро пожаловать!</string>
@@ -12,6 +12,6 @@
     <!-- Descriptions -->
     <string name="desc_welcome">В приложение Крипто Нумизматист. \n Рыночная капитализация криптовалют в реальном времени, цены и многое другое.</string>
     <string name="desc_explore">История цен, рынки и Последние изменения каждой криптовалюты.</string>
-    <string name="desc_analye">Предоставленные данные в простом и компактном дизайне, а также поделитесь с друзьями.</string>
+    <string name="desc_analyze">Предоставленные данные в простом и компактном дизайне, а также поделитесь с друзьями.</string>
 
 </resources>
