--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -15,6 +15,9 @@
     <string name="desc_explore">Price History, Markets &amp; Latest changes of every Crypto Currency.</string>
     <string name="desc_analyze">Data in easy and compact readable way &amp; share latest information with your friends.</string>
 
+    <!-- Coins menu -->
+    <string name="hint_search">Search for a coin</string>
+
     <!-- Content Description -->
     <string name="cd_img_walk_through">Walk-through Image</string>
 </resources>
