--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -15,6 +15,11 @@
     <string name="desc_explore">Price History, Markets &amp; Latest changes of every Crypto Currency.</string>
     <string name="desc_analyze">Data in easy and compact readable way &amp; share latest information with your friends.</string>
 
+    <!-- Navigation Fragment -->
+    <string name="menu_bookmarks">Bookmarks</string>
+    <string name="menu_coins">Coins</string>
+    <string name="menu_setting">Settings</string>
+
     <!-- Coins menu -->
     <string name="hint_search">Search for a coin</string>
 
