feat(ui/coins): add exchanges menu item to navigation fragment

--- a/app/src/main/res/values-ka-rGE/strings.xml
+++ b/app/src/main/res/values-ka-rGE/strings.xml
@@ -18,5 +18,6 @@
     <string name="menu_coins">ქოინები</string>
     <string name="menu_setting">პარამეტრები</string>
     <string name="menu_bookmarks">შენახულები</string>
+    <string name="menu_exchanges">გაცვლები</string>
 
 </resources>
