feat(search-history): add coin search-history recycler view

--- a/app/src/main/res/values-ka-rGE/strings.xml
+++ b/app/src/main/res/values-ka-rGE/strings.xml
@@ -26,5 +26,6 @@
     <string name="tv_volume_24h">მოცულობა (24სთ)</string>
     <string name="tv_24h_low">24სთ უმდაბლესი</string>
     <string name="error_no_data">მონაცემები არ არის</string>
+    <string name="search_history">ძიების ისტორია</string>
 
 </resources>
