--- a/app/src/main/res/values-ka-rGE/strings.xml
+++ b/app/src/main/res/values-ka-rGE/strings.xml
@@ -6,6 +6,7 @@
     <string name="hint_search">ქოინების ძიება</string>
     <string name="tv_market_cap">საბაზრო კაპიტალი</string>
     <string name="error_no_internet">ინტერნეტი არ არის</string>
+    <string name="add_to_bookmarks">შენახულებში დამატება</string>
     <string name="cd_img_walk_through">გზამკლევის სურათი</string>
 
     <!-- Walkthrough -->
@@ -27,5 +28,7 @@
     <string name="tv_24h_low">24სთ უმდაბლესი</string>
     <string name="error_no_data">მონაცემები არ არის</string>
     <string name="search_history">ძიების ისტორია</string>
+    <string name="visit_explorer">მკვლევართან გადასვლა</string>
+    <string name="remove_from_bookmarks">შენახულებიდან ამოშლა</string>
 
 </resources>
