feat(coin-bookmarks): add coin list sort according to choice

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -60,6 +60,9 @@
     <string name="sort_by_time">By Time</string>
     <string name="apply">Apply</string>
 
+    <string name="sort_by_asc">Ascending</string>
+    <string name="sort_by_desc">Descending</string>
+
     <!-- Bookmarks -->
     <string name="error_no_bookmarks">There are no bookmarks</string>
 
