--- a/app/src/main/res/values-ka-rGE/strings.xml
+++ b/app/src/main/res/values-ka-rGE/strings.xml
@@ -15,6 +15,8 @@
     <string name="sort_by_change">ცვლილებით</string>
     <string name="sort_by_time">დროით</string>
     <string name="apply">მიღება</string>
+    <string name="sort_by_asc">ზრდადობით</string>
+    <string name="sort_by_desc">კლებადობიით</string>
     <string name="error_no_bookmarks">შენახულები არ არის</string>
     <string name="cd_img_walk_through">გზამკლევის სურათი</string>
 
