feat(exchanges): add trade value indicator to details

--- a/app/src/main/res/values-ka-rGE/strings.xml
+++ b/app/src/main/res/values-ka-rGE/strings.xml
@@ -23,6 +23,7 @@
     <string name="sort_by_trading_pairs">გაცვლითი წყვილებით</string>
     <string name="sort_by_socket">სოკეტით</string>
     <string name="sort_by_updated">განახლებით</string>
+    <string name="exchange_section_pairs">წყვილები</string>
     <string name="error_no_bookmarks">შენახულები არ არის</string>
     <string name="cd_img_walk_through">გზამკლევის სურათი</string>
 
@@ -52,5 +53,7 @@
     <string name="sort_by">დალაგება</string>
     <string name="exchange_pairs">%s გაცვლების წყვილი</string>
     <string name="exchange_volume">მოცულობა</string>
+    <string name="exchange_section_price">ფასი</string>
+    <string name="exchange_section_vol_24">მოცულობა 24-სთ</string>
 
 </resources>
