feat(coin-menu): add search history removal

--- a/app/src/main/res/values-ka-rGE/strings.xml
+++ b/app/src/main/res/values-ka-rGE/strings.xml
@@ -59,5 +59,6 @@
     <string name="exchange_section_vol_24">მოც 24ს</string>
     <string name="coin_exchanges">გაცვლები</string>
     <string name="error_something">რაღაც არასწორად წავიდა… \\n გადატვირთეთ გვერდი</string>
+    <string name="remove_from_history">ძიების ისტორიიდან ამოშლა</string>
 
 </resources>
