--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -52,6 +52,7 @@
     <string name="remove_from_bookmarks">Remove from bookmarks</string>
     <string name="add_to_bookmarks">Add to bookmarks</string>
     <string name="visit_explorer">Visit Explorer</string>
+    <string name="remove_from_history">Remove from search history</string>
     <!-- Exchange Dialog -->
     <string name="visit_website">Visit Website</string>
 
