--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -98,6 +98,25 @@
     <string name="profit_investment_total">Total Investment</string>
     <string name="profit_exit_total">Total Exit</string>
 
+    <!-- Settings -->
+    <string name="settings_preferences">Preferences</string>
+        <string name="pref_theme">Theme</string>
+        <string name="pref_language">Language</string>
+        <string name="pref_currency">Currency</string>
+    <string name="settings_storage">Storage</string>
+        <string name="storage_clear">Clear Storage</string>
+        <string name="storage_clear_bookmarks">Clear Bookmarks</string>
+        <string name="storage_clear_history">Clear Search History</string>
+    <string name="settings_info">Info</string>
+        <string name="info_about">About us</string>
+        <string name="info_contact">Contact</string>
+        <string name="info_os">Open Source Acknowledgments</string>
+        <string name="info_privacy_policy" translatable="false">Privacy Policy</string>
+        <string name="info_credits" translatable="false">Credits</string>
+        <string name="info_version">App Version</string>
+        <string name="theme_dark">Dark</string>
+        <string name="theme_light">Light</string>
+        <string name="theme_system">System</string>
     <!-- General -->
     <string name="arrow_up" translatable="false">▴</string>
     <string name="arrow_down" translatable="false">▾</string>
